<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tomal.serviceappdemo.fragment.TutsPlusBottomSheetDialogFragment"
    android:paddingBottom="20dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/ggs_color_black"
            android:text="@string/ggs_rate_text"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            android:layout_marginLeft="16dp"
            android:id="@+id/textView"
            android:textSize="17sp"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/ggs_done_text"
            android:textAllCaps="false"
            android:textColor="@color/ggs_gradient_start_color"

            android:layout_marginRight="16dp"
            android:layout_marginEnd="9dp"
            android:layout_alignBaseline="@+id/textView"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="17sp"
            android:id="@+id/per_list_done_button"/>


    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/ggs_divider_color" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ggs_rate_here_hints_text"
        android:layout_marginTop="31dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="numberDecimal"
        android:id="@+id/per_serivice_rate_edit_text"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ggs_per_text"
        android:layout_marginLeft="17dp"
        android:textSize="17dp"
        android:textColor="@color/ggs_color_black"
        android:layout_marginBottom="17dp"
        android:layout_marginTop="17dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingBottom="20dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/ggs_corner_button"
            android:text="@string/ggs_per_service_text"
            android:layout_weight="1"
            android:textSize="12sp"
            android:id="@+id/per_service_button"
            android:textColor="@color/ggs_per_list_text_color"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/ggs_corner_button"
            android:text="@string/ggs_per_hour_text"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="12sp"
            android:id="@+id/per_hour_button"
            android:textColor="@color/ggs_per_list_text_color"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/ggs_corner_button"
            android:text="@string/ggs_per_day_text"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="12sp"
            android:id="@+id/per_day_button"
            android:textColor="@color/ggs_per_list_text_color"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/ggs_corner_button"
            android:text="@string/ggs_per_week_text"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_margin="2dp"
            android:id="@+id/per_week_button"
            android:textColor="@color/ggs_per_list_text_color"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/ggs_corner_button"
            android:text="@string/ggs_per_month_text"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_margin="2dp"
            android:id="@+id/per_month_button"
            android:textColor="@color/ggs_per_list_text_color"
            />


    </LinearLayout>



</LinearLayout>
